# python-smart-plug

./: CLAUDE.md  LearnedPatterns.md  README.md  ToDo.md  device_list.md  main.py  run_server.sh  smartplugcontroller.py
claude_test/: README.md  debug_api_client.py  verify_control_energy.py
docs/esp32s3/smartplugcontroller_software/: CMakeLists.txt  README.md  esp32-integration.md  sdkconfig  sdkconfig.defaults
docs/esp32s3/smartplugcontroller_software/main/: CMakeLists.txt  Kconfig.projbuild  beszel.c  beszel.h  buttons_check.c  buttons_check.h  claude_usage.c  claude_usage.h  idf_component.yml  main.c  network.c  network.h  ui.c  ui.h  usage_led.c  usage_led.h
plug_server/: __init__.py  app.py  models.py  service.py
