idf_component_register(
    SRCS
        "main.c"
        "ui.c"
        "buttons_check.c"
        "network.c"
        "beszel.c"
        "claude_usage.c"
        "usage_led.c"
    INCLUDE_DIRS "."
    REQUIRES
        nvs_flash
        esp_wifi
        esp_netif
        esp_event
        esp_http_client
        esp-tls
        driver
        esp_timer
)
